tests/negative/neg_pr113_variant_range_choice.safe
package Neg_PR113_Variant_Range_Choice
   type Packet (Count : Integer = 0) is
      record
         case Count
            when 0 to 3
               Value : Integer;



